feat: add register api

--- a/package.json
+++ b/package.json
@@ -3,15 +3,26 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
+    "start": "ts-node src/server.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
+  "module": "CommonJS",
   "dependencies": {
     "actionhero": "^29.3.4",
+    "bcrypt": "^5.1.1",
     "dotenv": "^16.4.7",
-    "mongodb": "^6.15.0"
+    "express": "^5.1.0",
+    "mongodb": "^6.15.0",
+    "mongoose": "^8.13.2"
+  },
+  "devDependencies": {
+    "@types/node": "^22.14.0",
+    "ts-node": "^10.9.2",
+    "tsx": "^4.19.3",
+    "typescript": "^5.8.3"
   }
 }
