feat: add login functionallity

--- a/.env
+++ b/.env
@@ -1,3 +1,2 @@
-# MONGO_URI=mongodb+srv://gadsonmulonga:vd15lsRu9k0KQ95l@cluster0.fmpeqvo.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 MONGO_URI=mongodb+srv://gadsonmulonga:vd15lsRu9k0KQ95l@cluster0.fmpeqvo.mongodb.net/afyaAI?retryWrites=true&w=majority&appName=Cluster0
-JWT_SECRET="djJIEIieEjudunEd88ejjf99wjrf"
+JWT_SECRET=f8gL3q!e5h8Zx9#W2nV$w8z2uN@iA#z8cGpUuHkX0Q2@Y5xU
