--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "description": "",
   "module": "CommonJS",
   "dependencies": {
+    "@google/genai": "^0.8.0",
     "actionhero": "^29.3.4",
+    "axios": "^1.8.4",
     "bcrypt": "^5.1.1",
     "dotenv": "^16.4.7",
     "express": "^5.1.0",
